syntax = "proto3";

package definition;
option go_package = "github.com/mesg-foundation/core/protobuf/definition";

// Status represents the status of a single execution.
// Note that a valid execution must have only one status
// flag at time.
enum Status {
  // Unknown status represents any status unknown to execution.
  Unknown = 0;

  // Created is an initial status after execution creation.
  Created = 1;

  // InProgress informs that processing of execution has been started.
  InProgress = 2;

  // Completed is a success status after execution was processed.
  Completed = 3;

  // Failed is an error status after execution was processed.
  Failed = 4;
}

// Execution represents a single execution run in engine.
message Execution {
  // Hash is a unique hash that identify a given execution.
  string hash = 1;

  // parentHash is the hash of the execution that triggered this current execution.
  string parentHash = 2;

  // eventID is unique event id.
  string eventID = 3;

  // Status is the current status of execution.
  Status status = 4;

  // serviceHash is hash of service that can proceed an execution
  string serviceHash = 5;

  // taskKey is the key of the task of this execution.
  string taskKey = 6;

  // inputs data of the execution.
  string inputs = 7;

  // outputs are the returned data of successful execution.
  string outputs = 8;

  // error message of a failed execution.
  string error = 9;

  // tags contain custom tags attached to execution.
  repeated string tags = 10;
}
